fix responsive for mobile. missions aligned in row

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -173,10 +173,6 @@ hr.solid {
   margin: 1.5rem 0;
 }
 
-.sharped-corner{
-  border-radius: 0px;
-}
-
 /* Layout styles */
 body {
   margin: 0;
